fix: fixing a problem with a border top on mobile

--- a/layouts/footer/Footer.module.css
+++ b/layouts/footer/Footer.module.css
@@ -1,8 +1,7 @@
-.footer {
+.wrapper {
   padding-top: 40px;
   padding-bottom: 20px;
   border-top: 1px solid var(--color-02);
-  background-color: palegoldenrod;
 }
 
 .top {
@@ -32,4 +31,14 @@
   font-size: 15px;
   line-height: 21px;
   color: var(--color-04);
+}
+
+@media screen and (max-width: 800px) {
+  .footer {
+    border-top: 1px solid var(--color-02);
+  }
+
+  .wrapper {
+    border-top: none;
+  }
 }
